Add JVM option for JavaFX on MacOS.